--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
-{
+{ "name": "lotr-sdk",
+"version": "0.0.0",
+"author": "Heidi Bang",
+"repository": {
+  "type": "git",
+  "url": "https://github.com/heidibang/lotr-sdk.git"
+},
   "devDependencies": {
     "@types/jest": "^29.4.0",
     "@types/node": "^14.11.2",
