--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@heidibang/lotr-sdk",
   "version": "0.0.1",
+  "main": "lib/index.js",
   "author": "Heidi Bang",
   "repository": {
     "type": "git",
