--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@heidibang/lotr-sdk",
   "version": "0.0.3",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "./src/index.js",
   "author": "Heidi Bang",
   "repository": {
     "type": "git",
